--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "google-auth-library": "^9.1.0",
+    "mongoose": "^8.2.1",
     "openai": "^4.11.1"
   },
   "devDependencies": {
