--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
   "dependencies": {
     "@google-ai/generativelanguage": "^1.1.0",
     "api": "^6.1.1",
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "google-auth-library": "^9.1.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.2.1",
     "openai": "^4.11.1"
   },
