--- a/package.json
+++ b/package.json
@@ -11,16 +11,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@google-ai/generativelanguage": "^1.1.0",
-    "api": "^6.1.1",
+    "@google/generative-ai": "^0.20.0",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
+    "dotenv": "^16.4.5",
     "express": "^4.18.2",
-    "google-auth-library": "^9.1.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.2.1",
-    "openai": "^4.11.1"
+    "mongoose": "^8.2.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
